--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
@@ -39,6 +42,7 @@
     "img-loader": "^3.0.0",
     "json-loader": "^0.5.7",
     "jsx-loader": "^0.13.2",
+    "mini-css-extract-plugin": "^0.4.0",
     "react-hot-loader": "^4.2.0",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.2",
