--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.81.0",
     "slick-carousel": "^1.8.1",
+    "tachyons": "^4.10.0",
     "vegas": "^2.4.0"
   }
 }
