--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.3.0",
     "img-loader": "^3.0.0",
