--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "lint": "eslint assets/scripts/admin.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
