--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js --mode development",
     "lint": "eslint assets/scripts/modules/extracatalog/index.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -48,14 +49,14 @@
     "json-loader": "^0.5.7",
     "jsx-loader": "^0.13.2",
     "mini-css-extract-plugin": "^0.4.0",
-    "react-hot-loader": "^4.2.0",
+    "react-hot-loader": "^4.3.4",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.10.2",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
