--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.0",
     "react-google-recaptcha": "^0.11.1",
+    "react-images": "^0.5.19",
     "react-masonry-component": "^6.2.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
