--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
-    "image-webpack-loader": "^4.3.0",
+    "image-webpack-loader": "^4.3.1",
     "img-loader": "^3.0.0",
     "json-loader": "^0.5.7",
     "jsx-loader": "^0.13.2",
@@ -56,6 +56,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.10.2",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.2"
   },
@@ -64,6 +65,7 @@
     "connected-react-router": "^4.3.0",
     "es6-promise": "^4.2.4",
     "history": "^4.7.2",
+    "i18next": "^11.9.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
@@ -73,6 +75,7 @@
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.0",
     "react-google-recaptcha": "^0.11.1",
+    "react-i18next": "^7.12.0",
     "react-images": "^0.5.19",
     "react-masonry-component": "^6.2.1",
     "react-redux": "^5.0.7",
