--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dom": "^16.4.0",
     "react-google-recaptcha": "^0.11.1",
     "react-i18next": "^7.12.0",
+    "react-image-lightbox": "^5.0.0",
     "react-images": "^0.5.19",
     "react-masonry-component": "^6.2.1",
     "react-redux": "^5.0.7",
