tour operator added to voyage information

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,10 @@
       "ignoreStrings": true
       }
     ],
+    "react/prefer-stateless-function": [ 0, { 
+      "ignorePureComponents": true 
+      }
+    ],
     "no-console": 0,
     "linebreak-style": 0,
     "indent": [2, "tab"],
