--- a/package.json
+++ b/package.json
@@ -63,10 +63,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "connected-react-router": "^4.3.0",
-    "es6-promise": "^4.2.4",
+    "es6-promise": "^4.2.5",
     "history": "^4.7.2",
     "i18next": "^11.9.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
